# Kartavya-PS-SIH25173.v1

./: .env  .env.example  .gitignore  CLEANUP_PLAN.md  CLEANUP_REPORT.json  DEPENDENCIES.md  FINAL_CLEANUP_REPORT.md  GITIGNORE_STRATEGY.md  INTEGRATION_STATUS_FINAL.md  LICENSE  MIGRATION_REPORT.json  PROJECT_STATUS.md  README.md  REPOSITORY_STRUCTURE.txt  REQUIREMENTS_DEPLOYMENT_READY.md  REQUIREMENTS_FIX_REPORT.md  REQUIREMENTS_SUMMARY.md  RESTRUCTURING_COMPLETE.md  START_DEMO.py  STRUCTURE_ANALYSIS.md  TEST_SYSTEM.py  VERSION_STRATEGY_GUIDE.md  _config.yml  app.py  blueprint.txt  cleanup.ps1  cleanup_old_dirs.py  cloudbuild.yaml  create_new_ui.py  integrate_and_build.py  optimize_project.py  prompt.txt  render-fullstack.yaml  render.yaml  repo-structure.txt  requirements-prod.txt  requirements.txt  roadmap.md  setup.ps1  setup.py  (+9 more)
backend/: .env.development.template  .env.example  .env.mock  .env.production.template  Dockerfile  README.md  __init__.py  create_demo_users.py  debug_auth.py  elastic_client.py  main.py  pyproject.toml  query_builder.py  requirements-demo.txt  requirements.optimized.txt  requirements.txt  run.py  setup_demo_users.py  siem_backend_integration.py  siem_contexts.db  test_and_run.py  test_auth.py  test_chat.py  test_core.py
backend/app/: main.py  main_complete.py
backend/app/api/: routes.py
backend/app/api/v1/: routes.py
backend/app/core/: config.py  nlp.py  nlp_complete.py  security.py  siem.py  siem_complete.py
backend/app/models/: schemas.py
backend/app/services/: context.py  formatter.py  formatter_complete.py  pipeline.py  pipeline_complete.py
backend/data/: users.json
backend/mock/: __init__.py
backend/mock/connectors/: __init__.py  elasticsearch_fixed.py  elasticsearch_mock.py
backend/mock/correlation/: attack_chain_generator.py
backend/mock/generators/: __init__.py  auditbeat_events.py  authentication.py  filebeat_events.py  network_logs.py  packetbeat_events.py  process_logs.py  security_alerts.py  system_metrics.py  windows_events.py
backend/mock/utils/: __init__.py  base.py
backend/nlp/: __init__.py  entity_extractor.py  intent_classifier.py
backend/rag_pipeline/: __init__.py  pipeline.py
backend/response_formatter/: __init__.py  formatter.py
backend/scripts/: create_demo_data.py  debug_login.py  debug_mongo.py  manage_cache.py  restructure_repo.py  run_demo.ps1  seed_demo_users_mongo.py  setup_mvp.py  test_dashboard.py  test_login.py  update_dependencies.ps1
backend/scripts/llm_training/: nl_to_query_pairs.json
backend/services/: enhanced_context_manager.py  siem_assistant_with_context.py
backend/src/: __init__.py  main.py
backend/src/analytics/: advanced_analytics.py  attack_chains.py
backend/src/api/: main.py
backend/src/api/middleware/: __init__.py  comprehensive.py  performance_middleware.py  rate_limit.py
backend/src/api/routes/: __init__.py  admin.py  assistant.py  auth.py  dashboard.py  investigations.py  platform_events.py  query.py  reports.py  websocket.py  windows_data.py
backend/src/chat/: __init__.py  conversation_memory.py
backend/src/connectors/: advanced_siem.py  dataset_connector.py  elastic.py  enterprise_siem.py  factory.py  mock_connector.py  mongodb_connector.py  multi_source_manager.py
backend/src/core/: config.py  pipeline.py  port_manager.py  security_filter.py
backend/src/core/ai/: hybrid_ai.py  response_generator.py
backend/src/core/caching/: cache_warmer.py  redis_manager.py
backend/src/core/database/: clients.py
backend/src/core/datasets/: hf_strategy.py
backend/src/core/monitoring/: performance_profiler.py
backend/src/core/nlp/: advanced_schema_mapper.py  entity_extractor.py  gemini_enhancer.py  intent_classifier.py  schema_mapper.py  smart_defaults.py  windows_query_builder.py
backend/src/core/optimization/: cache_manager.py
backend/src/core/platform/: detector.py
backend/src/core/query/: advanced_builder.py  universal_builder.py
backend/src/core/resilience/: circuit_breaker.py
backend/src/core/security/: isro_security.py
backend/src/core/services/: platform_aware_api.py
backend/src/dashboard/: __init__.py  streaming_dashboard.py
backend/src/integration/: siem_integration.py
backend/src/nlp/: __init__.py  security_entities.py
backend/src/processors/: batch_processor.py
backend/src/security/: rbac.py
backend/src/security_platform/: __init__.py  main_platform.py
backend/src/threat_intelligence/: __init__.py  threat_intel.py
backend/src/types/: visual_responses.py
backend/test suite/: test_backend_quick.py  test_beats_detection.py  test_elasticsearch_windows.py  test_final_functionality.py  test_platform_aware_api.py  validate_environment.py
kartavya-cli/: .replit  README.md  pyproject.toml  render.yaml  replit.nix  web_interface.py
kartavya-cli/src/kartavya_cli/: __init__.py  main.py
kartavya-cli/src/kartavya_cli/commands/: __init__.py  admin.py  assistant.py  dashboard.py  platform_events.py  (+2 more)
(+321 files in other folders)
